--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,19 +4,16 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/myblog?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
-    password: 123456
+    password: root
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
 shiro-redis:
   enabled: true
   redis-manager:
-    host: 192.168.230.10:6379
-    password: 123456
+    host: xxxxx
+    password: xxxxx
 markerhub:
-  jwt:
-    secret: f4e2e52034348f86b67cde581c0f9eb5
-    expire: 604800
-    header: token
+
 server:
   port: 8081
 
